# AIRUN-LLM-Benchmark

./: .env.example  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_contextual_task.ipynb  run_instruction_following.ipynb  run_tasks.ipynb
Config/Claude_Opus_3/: JS.json
Config/GPT4o_0513/: JS.json
Config/Gemini1_0/: JS.json
Config/Gemini1_5/: JS.json
Config/Gemini_20_Flash_Think_0121/: JS.json
Config/Llama3_70B/: JS.json
Dataset/JS/AngularCosmoMenu/: menu.html
Dataset/JS/AngularJSCalendar/: index.html
Dataset/JS/AngularJSCosmoMenu/: menu.js  page.js  rest.js
Dataset/JS/AngularMeteo/: angular.json  package.json
Dataset/JS/Piano_NativeJS/: index.html  script.js
Dataset/JS/ReactFetchAPI/: index.tsx
Dataset/JS/ReactSelect/: index.tsx
Utils/: auto_eval.py  constants.py  create_files.py  enrich_tasks.py  execute_test.py  get_tokens_and_time.py  instruction_following.py  instructions.md  instrution_following.py  lcif.md  prepare_data.py  sdlc_experiment.py  sdlc_js_test_runner.py  task4_improved.py
Utils/JS_Code_Analyzer/: README.md  calculate-complexity.js  output-gemini-pro-vs-opus-vs-gpt4turbo.csv  package.json
Utils/llm/: ai_message.py  ai_tool.py  amazon_nova.py  anthropic_vertex.py  api.py  bedrock.py  config.py  gemini_ai_studio.py  gemini_vertex.py  message_converter.py  message_formatter.py  openai_completions.py  responses_api.py  test_message_converters.py  tool_handler.py
Utils/sdlc_test/: package-lock.json  package.json  test-results.json  tsconfig.json
(+325 files in other folders)
